# Blocks

./: .gitignore  .gitmodules  Blocks.sln  Blocks.vcxproj  Blocks.vcxproj.filters  CMakeLists.txt  main.c  readme.md
benchmark/: ChunkMeshingResults.txt  HashTableBenchmark.c  HashTableBenchmark.java  HashTableBenchmark.py  HashTableBenchmarkResults.txt
glad/include/glad/: glad.h
glad/src/: glad.c
include/: aabb.h  base.h  perlin_noise.h  player.h  renderer.h  world.h
res/: player.blend
src/: aabb.c  base.c  camera.c  data_structures.c  linalg.c  main.c  mgl.h  perlin_noise.c  player.c  renderer.c  test1.c  test2.c  world.c
vs/: Blocks.vcxproj  Blocks.vcxproj.filters
